refactor: add new types for statuses that can be used through the stack
